--- a/src/components/StoreItems/StoreItems.module.css
+++ b/src/components/StoreItems/StoreItems.module.css
@@ -1,8 +1,23 @@
 .storeItems {
-  margin: 3rem;
+  padding: 3rem;
 }
 
-.itemcard {
+.itemCard {
   display: flex;
+  height: 13rem;
+  margin: 2rem;
 }
 
+.imageContainer {
+  height: 13rem;
+}
+.imageContainer img {
+  max-width: 100%;
+  width: 100%;
+  height: 13rem;
+  object-fit: cover;
+}
+
+.itemInfo {
+  padding-left: 2rem;
+}
