--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,6 @@
 }
 
 body {
-  margin: 0;
-  display: flex;
-  min-width: 320px;
+  width: 100%;
   min-height: 100vh;
 }
