--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,5 +1,5 @@
 .home {
   background-color: rgb(40, 40, 196);
   height: 92vh;
-  overflow: hidden;
+  width: 100%;
 }
